# madsoft

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: app.py  db.py  schemas.py
