[tool.poetry]
name = "madsoft"
version = "0.1.0"
description = ""
authors = ["Mapc <mapctrigotixd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
minio = "^7.2.7"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
